--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    {{ content }}
+    <div id="container">
+      <div id="inner_wrapper">
+        {{ content }}
+      </div>
+    </div>
   </body>
 </html>
