--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,13 +3,16 @@ layout: default
 ---
 
 <section class="content">
-  <h1>
-    <a href="{{ page.url }}">{{ page.title }}</a>
-  </h1>
+  <div class="postTitleWrapper">
+    <a href="/" class="backArrow">&larr; Back to home</a>
+    <a href="{{ page.url }}" class="postTitle">{{ page.title }}</a>
+  </div>
 
-  <section class="date">
+  <div class="postDateWrapper">
     {{ page.date | date: "%B %e, %Y" }}
-  </section>
+  </div>
 
-  {{ content }}
+  <div class="postContentWrapper">
+    {{ content }}
+  </div>
 </section>
