--- a/css/style.css
+++ b/css/style.css
@@ -23,17 +23,35 @@ body {
   color: #333;
 }
 
+h1, h2, h3 {
+  font-weight: normal;
+}
+
 a {
   text-decoration: none;
   color: #0088CC;
 }
 
+h1 {
+  font-size: 45px;
+  color: #444;
+}
+
 h2{
+  font-size: 28px;
+  line-height: 36px;
   margin-top: 40px;
+  font-weight: normal;
+  color: #444;
 }
 
 ul {
   list-style: none;
+}
+
+blockquote {
+  color: #666;
+  font-style: italic;
 }
 
 .postsList li {
@@ -52,6 +70,7 @@ ul {
 #inner_wrapper {
   width: 940px;
   margin: auto;
+  margin-bottom: 100px;
 }
 
 .postTitleWrapper {
@@ -68,19 +87,15 @@ ul {
 }
 
 .postTitle {
-  font-size: 46px;
-  color: #333;
-  display: block;
+  color: #444;
+  font-weight: normal;
 }
 
 .postContentWrapper {
   margin-top: 35px;
+  margin-bottom: 100px;
 }
 
-.highlight{ 
-  background-color:#073642;
-  color:#93a1a1
-}
 
 .highlight .c{
   color:#586e75 !important;
@@ -104,7 +119,7 @@ ul {
 
 .highlight .cs{
   color:#586e75 !important;
-  font-weight:bold !important;
+  ;
   font-style:italic !important
 }
 
@@ -119,22 +134,30 @@ ul {
 
 .highlight .o{
   color:#93a1a1 !important;
-  font-weight:bold !important
+  
 }
 
 .highlight .p{
   color:#93a1a1 !important
-}.highlight .ow{color:#2aa198 !important;font-weight:bold !important}.highlight .gd{color:#93a1a1 !important;background-color:#372c34 !important;display:inline-block}.highlight .gd .x{color:#93a1a1 !important;background-color:#4d2d33 !important;display:inline-block}.highlight .ge{color:#93a1a1 !important;font-style:italic !important}.highlight .gr{color:#aa0000}.highlight .gh{color:#586e75 !important}.highlight .gi{color:#93a1a1 !important;background-color:#1a412b !important;display:inline-block}.highlight .gi .x{color:#93a1a1 !important;background-color:#355720 !important;display:inline-block}.highlight .go{color:#888888}.highlight .gp{color:#555555}.highlight .gs{color:#93a1a1 !important;font-weight:bold !important}.highlight .gu{color:#6c71c4 !important}.highlight .gt{color:#aa0000}.highlight .kc{color:#859900 !important;font-weight:bold !important}.highlight .kd{color:#268bd2 !important}.highlight .kp{color:#cb4b16 !important;font-weight:bold !important}.highlight .kr{color:#d33682 !important;font-weight:bold !important}.highlight .kt{color:#2aa198 !important}.highlight .n{color:#268bd2 !important}.highlight .na{color:#268bd2 !important}.highlight .nb{color:#859900 !important}.highlight .nc{color:#d33682 !important}.highlight .no{color:#b58900 !important}.highlight .ni{color:#800080}.highlight .nl{color:#859900 !important}.highlight .ne{color:#268bd2 !important;font-weight:bold !important}.highlight .nf{color:#268bd2 !important;font-weight:bold !important}.highlight .nn{color:#b58900 !important}.highlight .nt{color:#268bd2 !important;font-weight:bold !important}.highlight .nx{color:#b58900 !important}.highlight .bp{color:#999999}.highlight .vc{color:#008080}.highlight .vg{color:#268bd2 !important}.highlight .vi{color:#268bd2 !important}.highlight .nv{color:#268bd2 !important}.highlight .w{color:#bbbbbb}.highlight .mf{color:#2aa198 !important}.highlight .m{color:#2aa198 !important}.highlight .mh{color:#2aa198 !important}.highlight .mi{color:#2aa198 !important}.highlight .mo{color:#009999}.highlight .s{color:#2aa198 !important}.highlight .sb{color:#d14}.highlight .sc{color:#d14}.highlight .sd{color:#2aa198 !important}.highlight .s2{color:#2aa198 !important}.highlight .se{color:#dc322f !important}.highlight .sh{color:#d14}.highlight .si{color:#268bd2 !important}.highlight .sx{color:#d14}.highlight .sr{color:#2aa198 !important}.highlight .s1{color:#2aa198 !important}.highlight .ss{color:#990073}.highlight .il{color:#009999}.highlight div .gd,.highlight div .gd .x,.highlight div .gi,.highlight div .gi .x{display:inline-block;width:100%}
-
-.highlight {
-  border-radius: 5px;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  font-size: 12px;
-  padding-top: 5px;
-  padding-bottom: 5px;
 }
+
+.highlight .ow{color:#2aa198 !important;}.highlight .gd{color:#93a1a1 !important;background-color:#372c34 !important;display:inline-block}.highlight .gd .x{color:#93a1a1 !important;background-color:#4d2d33 !important;display:inline-block}.highlight .ge{color:#93a1a1 !important;font-style:italic !important}.highlight .gr{color:#aa0000}.highlight .gh{color:#586e75 !important}.highlight .gi{color:#93a1a1 !important;background-color:#1a412b !important;display:inline-block}.highlight .gi .x{color:#93a1a1 !important;background-color:#355720 !important;display:inline-block}.highlight .go{color:#888888}.highlight .gp{color:#555555}.highlight .gs{color:#93a1a1 !important;}.highlight .gu{color:#6c71c4 !important}.highlight .gt{color:#aa0000}.highlight .kc{color:#859900 !important;}.highlight .kd{color:#268bd2 !important}.highlight .kp{color:#cb4b16 !important;}.highlight .kr{color:#d33682 !important;}.highlight .kt{color:#2aa198 !important}.highlight .n{color:#268bd2 !important}.highlight .na{color:#268bd2 !important}.highlight .nb{color:#859900 !important}.highlight .nc{color:#d33682 !important}.highlight .no{color:#b58900 !important}.highlight .ni{color:#800080}.highlight .nl{color:#859900 !important}.highlight .ne{color:#268bd2 !important;}.highlight .nf{color:#268bd2 !important;}.highlight .nn{color:#b58900 !important}.highlight .nt{color:#268bd2 !important;}.highlight .nx{color:#b58900 !important}.highlight .bp{color:#999999}.highlight .vc{color:#008080}.highlight .vg{color:#268bd2 !important}.highlight .vi{color:#268bd2 !important}.highlight .nv{color:#268bd2 !important}.highlight .w{color:#bbbbbb}.highlight .mf{color:#2aa198 !important}.highlight .m{color:#2aa198 !important}.highlight .mh{color:#2aa198 !important}.highlight .mi{color:#2aa198 !important}.highlight .mo{color:#009999}.highlight .s{color:#2aa198 !important}.highlight .sb{color:#d14}.highlight .sc{color:#d14}.highlight .sd{color:#2aa198 !important}.highlight .s2{color:#2aa198 !important}.highlight .se{color:#dc322f !important}.highlight .sh{color:#d14}.highlight .si{color:#268bd2 !important}.highlight .sx{color:#d14}.highlight .sr{color:#2aa198 !important}.highlight .s1{color:#2aa198 !important}.highlight .ss{color:#990073}.highlight .il{color:#009999}.highlight div .gd,.highlight div .gd .x,.highlight div .gi,.highlight div .gi .x{display:inline-block;width:100%}
+
 
 .highlight .lineno {
   padding: 5px;
+}
+
+.highlight, code{ 
+  background-color: #F7F7F9;
+  color:#333;
+  padding: 5px;
+  font-weight: normal;
+  font-size: 12px;
+  font-family: "Monaco", "Menlo", "Consolas" , "Courier New", monospace;
+}
+
+.highlight code, highlight pre {
+  font-family: "Monaco", "Menlo", "Consolas" , "Courier New", monospace;
+  line-height: 22px;
 }
